Start block separation

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,9 @@
     "vtex.render-runtime": "8.x",
     "vtex.flex-layout": "0.x"
   },
-  "registries": ["smartcheckout"],
+  "registries": [
+    "smartcheckout"
+  ],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
