--- a/store/blocks/sellers.jsonc
+++ b/store/blocks/sellers.jsonc
@@ -10,10 +10,16 @@
   },
 
   "seller-table": {
-    "children": ["seller-head", "seller-body"]
+    "children": ["seller-simulate-shipping", "seller-head", "seller-body"]
   },
   "seller-head": {
-    "children": ["seller-head-cell#Seller", "seller-head-cell#Price"]
+    "children": [
+      "seller-head-cell#Seller",
+      "seller-head-cell#Price",
+      "seller-head-cell#Shipping",
+      "seller-head-cell#PriceWithShipping",
+      "seller-head-cell#BuyButton"
+    ]
   },
   "seller-head-cell#Seller": {
     "props": {
@@ -25,11 +31,38 @@
       "title": "Price"
     }
   },
+  "seller-head-cell#Shipping": {
+    "props": {
+      "title": "Shipping"
+    }
+  },
+  "seller-head-cell#PriceWithShipping": {
+    "props": {
+      "title": "Price With Shipping"
+    }
+  },
+  "seller-head-cell#BuyButton": {
+    "props": {
+      "title": "Add To Cart"
+    }
+  },
+
   "seller-body": {
     "children": ["seller-row"]
   },
   "seller-row": {
-    "children": ["seller-name", "seller-price", "seller-shipping"]
+    "children": [
+      "seller-name",
+      "seller-price",
+      "seller-shipping",
+      "seller-price-with-shipping",
+      "seller-add-to-cart"
+    ]
+  },
+  "seller-add-to-cart": {
+    "props": {
+      "OneClickBuy": true
+    }
   },
   "flex-layout.col#infoRight": {
     "children": ["product-images"],
