Minor fixes, vtex setup recomendations

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,9 @@
     "vtex.flex-layout": "0.x",
     "vtex.format-currency": "0.x"
   },
-  "registries": ["smartcheckout"],
+  "registries": [
+    "smartcheckout"
+  ],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
