--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
     "vtex.shipping-estimate-translator": "2.x",
     "vtex.render-runtime": "8.x",
     "vtex.flex-layout": "0.x",
-    "vtex.format-currency": "0.x"
+    "vtex.format-currency": "0.x",
+    "vtex.address-form": "4.x"
   },
   "registries": [
     "smartcheckout"
