--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -2,21 +2,11 @@
   "extends": "@vtex/tsconfig",
   "compilerOptions": {
     "noEmitOnError": false,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "jest",
-      "graphql"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node", "jest", "graphql"],
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es2017"
   },
-  "include": [
-    "./typings/*.d.ts",
-    "./**/*.tsx",
-    "./**/*.ts"
-  ]
+  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts", "utils/utils.js"]
 }
