--- a/store/blocks/sellers.jsonc
+++ b/store/blocks/sellers.jsonc
@@ -73,8 +73,11 @@
   },
   "seller-add-to-cart": {
     "props": {
-      "OneClickBuy": true
-    }
+      "isOneClickBuy": true
+    },
+    "blocks": [
+      "buy-button"
+    ]
   },
   "flex-layout.col#infoRight": {
     "children": [
