Fix on button duplicity, alter name o manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "vendor": "vtex",
-  "name": "sellerselector",
+  "name": "seller-selector",
   "version": "0.2.0",
   "title": "Seller Selector",
   "description": "Seller Selector on Products",
