--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "CHANGE_ME",
+  "name": "seller-selector",
+  "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "lint": "cd ./react && yarn lint",
-    "format": "prettier --write \"**/*.{ts,js,json}\"",
-    "test": "cd ./react && yarn test",
+    "lint": "eslint --ext js,jsx,ts,tsx .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
     "lint:locales": "intl-equalizer",
-    "locales:fix": "intl-equalizer --fix",
-    "verify": "yarn lint && yarn lint:locales && yarn test"
+    "test": "cd ./react && yarn test"
+  },
+  "intl-equalizer": {
+    "referenceLocale": "en",
+    "localeDirectory": "messages"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn lint:locales && yarn locales:fix",
-      "pre-push": "yarn verify"
+      "pre-commit": "lint-staged && intl-equalizer && intl-equalizer --fix"
     }
   },
   "lint-staged": {
@@ -26,20 +28,14 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "12.12.21",
-    "@vtex/intl-equalizer": "^2.3.0",
-    "@vtex/prettier-config": "0.1.3",
-    "eslint": "6.8.0",
-    "eslint-config-vtex": "12.2.1",
-    "eslint-config-vtex-react": "5.1.0",
-    "husky": "4.2.0",
-    "lint-staged": "10.0.2",
-    "prettier": "1.19.1",
-    "typescript": "3.7.5"
-  },
-  "version": "0.0.0",
-  "intl-equalizer": {
-    "referenceLocale": "en",
-    "localeDirectory": "messages"
+    "@vtex/intl-equalizer": "^2.5.0",
+    "@vtex/prettier-config": "^0.3.5",
+    "eslint": "^7.14.0",
+    "eslint-config-vtex": "^12.8.11",
+    "eslint-config-vtex-react": "^6.8.3",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0",
+    "typescript": "^3.9.6"
   }
 }
