--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -2,11 +2,10 @@
   "extends": "@vtex/tsconfig",
   "compilerOptions": {
     "noEmitOnError": false,
-    "typeRoots": ["node_modules/@types"],
-    "types": ["node", "jest", "graphql"],
+    "lib": ["dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es2017"
   },
-  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts", "utils/utils.js"]
+  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
 }
