updating css handles

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "vtex.styleguide": "9.x",
-    "vtex.css-handles": "0.x",
+    "vtex.css-handles": "1.x",
     "vtex.product-context": "0.x",
     "vtex.store": "2.x",
     "vtex.store-components": "3.x",
@@ -24,9 +24,7 @@
     "vtex.address-form": "4.x",
     "vtex.add-to-cart-button": "0.x"
   },
-  "registries": [
-    "smartcheckout"
-  ],
+  "registries": ["smartcheckout"],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
