--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
     "vtex.flex-layout": "0.x",
     "vtex.format-currency": "0.x",
     "vtex.address-form": "4.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.native-types": "0.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
