--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
     "store": "0.x"
   },
   "dependencies": {
+    "vtex.native-types": "0.x",
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.product-context": "0.x",
@@ -24,9 +25,7 @@
     "vtex.address-form": "4.x",
     "vtex.add-to-cart-button": "0.x"
   },
-  "registries": [
-    "smartcheckout"
-  ],
+  "registries": ["smartcheckout"],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
