--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "vtex",
   "name": "seller-selector",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "title": "Seller Selector",
   "description": "Seller Selector on Products",
   "builders": {
@@ -25,7 +25,9 @@
     "vtex.address-form": "4.x",
     "vtex.add-to-cart-button": "0.x"
   },
-  "registries": ["smartcheckout"],
+  "registries": [
+    "smartcheckout"
+  ],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
